resolve #40 added word-break attribute

--- a/md_docs/.vuepress/styles/index.styl
+++ b/md_docs/.vuepress/styles/index.styl
@@ -12,3 +12,5 @@ h2
 .author
     font-family: 'Do Hyeon', sans-serif;
 	
+blockquote
+    word-break: break-all;
